[project]
name = "babycomeback"
version = "0.1.0"
description = "OOP Hackathon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "pydub>=0.25.1",
    "pyngrok>=7.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.3",
]
